[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimensionalbase"
dynamic = ["version"]
description = "The protocol and database for AI communication. Storage and coordination built for how AI actually thinks — in dimensions, not text."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "DimensionalBase Team"}
]
keywords = ["ai", "agents", "database", "embeddings", "multi-agent", "protocol", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24,<3.0",
]

[tool.setuptools.dynamic]
version = {attr = "dimensionalbase.__version__"}

[project.optional-dependencies]
embeddings-local = ["sentence-transformers>=2.2,<4"]
embeddings-openai = ["openai>=1,<2"]
embeddings-all = ["sentence-transformers>=2.2,<4", "openai>=1,<2"]
mcp = ["mcp>=1,<2; python_version >= '3.10'"]
server = ["fastapi>=0.104,<1", "uvicorn[standard]>=0.24,<1", "websockets>=12,<16"]
cli = ["click>=8,<9", "rich>=13,<16"]
langchain = ["langchain-core>=0.2,<1"]
crewai = ["crewai>=0.41,<1", "crewai-tools>=0.8,<1"]
security = ["cryptography>=41,<46"]
distributed = ["psycopg2-binary>=2.9,<3", "redis>=5,<7"]
bench = ["openai>=1,<2", "anthropic>=0.37,<1"]
dev = [
    "pytest>=7,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-cov>=4,<7",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "build>=1.2,<2",
    "twine>=5,<7",
    "black>=23,<26",
    "ruff>=0.1,<1",
    "mypy>=1,<2",
    "pre-commit>=3,<5",
]
all = [
    "sentence-transformers>=2.2,<4",
    "openai>=1,<2",
    "mcp>=1,<2; python_version >= '3.10'",
    "fastapi>=0.104,<1",
    "uvicorn[standard]>=0.24,<1",
    "websockets>=12,<16",
    "click>=8,<9",
    "rich>=13,<16",
    "langchain-core>=0.2,<1",
    "crewai>=0.41,<1",
    "crewai-tools>=0.8,<1",
    "cryptography>=41,<46",
    "psycopg2-binary>=2.9,<3",
    "redis>=5,<7",
    "anthropic>=0.37,<1",
]

[project.scripts]
dimensionalbase = "dimensionalbase.cli.main:cli"
db = "dimensionalbase.cli.main:cli"
dimensionalbase-mcp = "dimensionalbase.mcp.__main__:main"
dimensionalbase-server = "dimensionalbase.server.__main__:main"

[project.urls]
Homepage = "https://dimensionalbase.com"
Repository = "https://github.com/thetejasagrawal/DimensionalBase"
Documentation = "https://docs.dimensionalbase.com"
Issues = "https://github.com/thetejasagrawal/DimensionalBase/issues"
Changelog = "https://github.com/thetejasagrawal/DimensionalBase/releases"
Security = "https://github.com/thetejasagrawal/DimensionalBase/security/policy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dimensionalbase = [
    "server/static/*.html",
    "server/static/*.css",
    "server/static/*.js",
]

[tool.setuptools.packages.find]
include = ["dimensionalbase*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["dimensionalbase"]

[tool.coverage.report]
fail_under = 70
show_missing = true
